# provewhen-rs

./: .gitignore  Cargo.toml  tt_snips.json
backend/: Cargo.toml
backend/src/: datetime_utils.rs  key_types.rs  main.rs  pub_key_storage.rs
backend/src/api/: endpoints.rs  mod.rs  types.rs
backend/src/key_types/: mod.rs  single_key_set.rs  timed_public_key.rs
frontend/: Dockerfile  index.html  nginx.conf  provewhen.io.conf  verify_message.html
frontend/provewhen-io/: post_message.html
frontend/provewhen-io/static/css/: custom.css
src/: datetime_utils.rs  demo.rs  errors.rs  key_types.rs  main.rs  pub_key_storage.rs
src/api/: endpoints.rs  mod.rs  types.rs
